--- a/index.html
+++ b/index.html
@@ -49,11 +49,18 @@
                             <li class="menu__item">
                                 <a href="" class="menu__link">8 800 333 43 89</a>
                                 <img src="images/arrowIcon.svg" alt="">
+                                <ul class="item__sub__menu">
+                                    <li class="sub__menu__item"><a class="sub-menu__link" href="">8 800 333 43 89</a></li>
+                                    <li class="sub__menu__item"><a class="sub-menu__link" href="">8 800 333 43 89</a></li>
+                                    <li class="sub__menu__item"><a class="sub-menu__link" href="">8 800 333 43 89</a></li>
+                                </ul>
                             </li>
                         </ul>
                         <a href="" class="order__link">Заказать звонок</a>
-                        <a href="" class="telegram__link"><img src="images/telegram__icon.svg" alt=""></a>
-                        <a href="" class="whatsap__link"><img src="images/whatsap__icon.svg" alt=""></a>
+                        <div class="social__links">
+                            <a href="" class="telegram__link"><img src="images/telegram__icon.svg" alt=""></a>
+                            <a href="" class="whatsap__link"><img src="images/whatsap__icon.svg" alt=""></a>
+                        </div>
                     </div>
                     <div class="burger__menu">
                         <div class="burger__menu__field">
@@ -604,12 +611,15 @@
                     </ul>
                     <ul class="footer__menu">
                         <li class="menu__item"><a class="menu__tittle__link" href="">Контакты</a></li>
-                        <li class="menu__item"><a class="menu__tittle__link" href="">8 800 333 43 89 <img src="images/arrowIconWhite.svg" alt=""></a></li>
-                        <ul class="item__sub__menu">
-                            <li class="sub__menu__item"><a class="sub-menu__link" href="">Стать дилером</a></li>
-                            <li class="sub__menu__item"><a class="sub-menu__link" href="">Прайс-листы</a></li>
-                            <li class="sub__menu__item"><a class="sub-menu__link" href="">Партнёрские материалы</a></li>
-                        </ul>
+                        <li class="menu__item">
+                            <a class="menu__tittle__link" href="">8 800 333 43 89 <img src="images/arrowMiniIconWhite.svg" alt=""></a>
+                            <ul class="item__sub__menu">
+                                <li class="sub__menu__item"><a class="sub-menu__link" href="">8 800 333 43 89</a></li>
+                                <li class="sub__menu__item"><a class="sub-menu__link" href="">8 800 333 43 89</a></li>
+                                <li class="sub__menu__item"><a class="sub-menu__link" href="">8 800 333 43 89</a></li>
+                            </ul>
+                        </li>
+                        
                         <li class="menu__item"><a class="menu__link" href="">info@rotosnab.ru</a></li>
                         <li class="menu__item"><a class="menu__link" href="">Москва, Чапаевский переулок, д. 14, подъезд 1, этаж 5</a></li>
                         <li class="menu__item"><a class="menu__link" href=""></a></li>
